# cw_4_potemkin_da

./: README.md  pyproject.toml  settings.py
src/: json_saver.py  main.py  main_utils.py  search_class.py  vacancy.py
